plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kasigrill'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
    // 1. Telegram Bot Integration
    implementation 'org.telegram:telegrambots-meta:6.8.0'

    // 2. Core Web & Templating (Fixed & Added Thymeleaf)
    implementation 'org.springframework.boot:spring-boot-starter-web' // Replaced starter-webmvc
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // ADDED for the dashboard
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // 3. Database & Persistence
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'

    // 4. Developer Tools & Boilerplate reduction
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 5. Testing Utilities (Updated to align with standard starter-web)
    testImplementation 'org.springframework.boot:spring-boot-starter-test' // Standard comprehensive test suite
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}
